# screed

./: .gitignore  CMakeLists.txt  ChangeLog  Makefile  Makefile_old  README  README.txt  TODO  setup.py  smoketests.py  tst-create-2.py  tst-create.py  tst-iterate-2.py  tst-iterate.py  tst-riterate-2.py  tst-riterate.py
bigtests/: __init__.py
doc/: COPYRIGHT.txt  bsd.txt  rst2html.py  screed.html  screed.txt  seqdb2.doc  seqdb2.html
python/: _seqdb2.pyx  benchmark.py  filenames.txt  runbenches.py  screed.pyx  screed_pygr_api.py  seqdb2.py  seqdb2.pyx  setup.py  times.db
src/: _seqdb2.pyx  dbmake.cpp  dbread.cpp  dbread.drv.cpp  dbread.h  dbread.lib.cpp  dbread_drv.cpp  dbread_lib.cpp  dbwrite.h  dbwrite.lib.cpp  dbwrite_lib.cpp  fadb_test.cpp  fadbm.cpp  fadbm.drv.cpp  fadbm_drv.cpp  fqdb_test.cpp  fqdbm.cpp  fqdbm.drv.cpp  fqdbm_drv.cpp  hashFunc.h  hashlib.cpp  hashlib.h  seqdb2.drv.cpp  seqdb2.test.cpp  setup.py  shelltest.cpp  timing.cpp  tools.cpp  tools.h  tst.py
src/lib/: seqdb2.h  seqdb2.lib.cpp
tests/: __init__.py  test.fa  test.fastq  test_pygr_api.py
